avance n°1(casi finalizo)